# tgz-community

./: .gitignore  Autumn23.html  LICENSE  Summer23.html  Winter22.html  index.html  pyproject.toml  requirements.txt  vercel.json
api/: bgc.py  filters.py  index.py  model.py  parser.py  ranking.py
api/tests/: test_bgc.py  test_filters.py  test_index.py  test_model.py  test_parser.py  test_ranking.py
templates/: dashboard.html
