[tool.poetry]
name = "tgz-community"
version = "0.1.0"
description = "Tournament Management for The Great Zimbabwe"
authors = ["Siddharta Govindaraj <siddharta@silverstripesoftware.in>"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.9.0"
starlette = "^0.27.0"
jinja2 = "^3.1.2"
pyparsing = "^3.0.9"
more-itertools = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-watcher = "^0.2.6"
httpx = "^0.23.1"
pytest-asyncio = "^0.20.3"
aioresponses = "^0.7.4"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
